--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,207 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'PT Sans', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home,
+.products,
+.contact-us,
+.sign-up,
+.marketing,
+.consulting {
   display: flex;
-  flex-direction: column;
+  height: 90vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 3rem;
 }
 
-.App-link {
-  color: #61dafb;
+.home {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: rgb(15, 15, 15);
+  font-size: 100px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.page1{
+  height: 427px;
+  background: rgba(255, 191, 0, 0.664);
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  padding: 0rem 0.5rem;
+} 
+
+.page2{
+  height: 427px;
+  background: rgba(250, 68, 68, 0.664);
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  padding: 0rem 0.5rem;
+} 
+.page3{
+  height: 427px;
+  background: rgba(0, 0, 255, 0.664);
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  padding: 0rem 0.5rem;
+} 
+.page4{
+  height: 427px;
+  background: rgba(0, 128, 128, 0.664);
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  padding: 0rem 0.5rem;
+} 	
+.page5{
+  height: 427px;
+  background: rgba(70, 134, 252, 0.664);
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  padding: 0rem 0.5rem;
+} 
+
+.page6{
+  height: 427px;
+  background: rgba(73, 197, 73, 0.664);
+  color: rgb(0, 0, 0);
+  font-size: 15px;
+  padding: 0rem 0.5rem;
+} 
+
+
+
+
+
+.Appform1 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: rgb(0, 0, 0);
+  background: rgb(55, 188, 250);
+  font-size: 15px;
+  height: 330px;
+  width: 100vw;
+  text-align:'center';
+  padding: 3rem 10rem;
+}
+.head1{
+  background-position: center;
+  background-size: cover;
+  color: rgb(0, 0, 0);
+  background: rgb(55, 188, 250);
+  text-align:'left';
+  padding: 0.5rem 5rem;
+}  
+.Appform2 {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: rgb(0, 0, 0);
+  background: rgb(72, 121, 255);
+  font-size: 15px;
+  height: 330px;
+  width: 100vw;
+  text-align:'center';
+  padding: 3rem 10rem;
+
+}
+.head2{
+  background-position: center;
+  background-size: cover;
+  color: rgb(0, 0, 0);
+  background: rgb(72, 121, 255);
+  text-align:'left';
+  padding: 0.5rem 5rem;
+}  
+.Appform3{
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: rgb(0, 0, 0);
+  background: rgb(157, 255, 92);
+  font-size: 15px;
+  height: 330px;
+  width: 100vw;
+  text-align:'center';
+  padding: 3rem 10rem;
+}
+
+.head3{
+  background-position: center;
+  background-size: cover;
+  color: rgb(0, 0, 0);
+  background: rgb(157, 255, 92);
+  text-align:'left';
+  padding: 0.5rem 5rem;
+}  
+
+.Appform4{
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: rgb(0, 0, 0);
+  background: rgb(210, 180, 140);
+  font-size: 15px;
+  height: 330px;
+  width: 100vw;
+  text-align:'center';
+  padding: 3rem 10rem;
+}
+.head4{
+  background-position: center;
+  background-size: cover;
+  color: rgb(0, 0, 0);
+  background: rgb(210, 180, 140);
+  text-align:'left';
+  padding: 0.5rem 5rem;
+}  
+
+.Appform5{
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: rgb(0, 0, 0);
+  background: rgb(252, 171, 90);
+  font-size: 15px;
+  height: 330px;
+  width: 100vw;
+  text-align:'center';
+  padding: 3rem 10rem;
+}
+.head5{
+  background-position: center;
+  background-size: cover;
+  color: rgb(0, 0, 0);
+  background: rgb(255,171,90);
+  text-align:'left';
+  padding: 0.5rem 5rem;
+}  
+
+.Appform6{
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: rgb(0, 0, 0);
+  background: rgb(116, 116, 116);
+  font-size: 15px;
+  height: 330px;
+  width: 100vw;
+  text-align:'center';
+  padding: 3rem 10rem;
+}
+.head6{
+  background-position: center;
+  background-size: cover;
+  color: rgb(0, 0, 0);
+  background: rgb(116, 116, 116);
+  text-align:'left';
+  padding: 0.5rem 5rem;
+}  
+.inform{
+  height: 300px;
+  padding: 4rem 10rem;
 }
